# pdl-api

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md
.github/workflows/: docker.yaml
app/: main.py  pdl.yaml  pdlapiresolver.py  test.py
app/controllers/: configs.py  gunicorn_config.py  pdl.py
app/controllers/data/commodities/: commodities_map_data.json  commodities_state_distribution_data.json  commodities_subprograms_data.json  dmc_state_distribution_data.json  dmc_subprograms_data.json  sada_state_distribution_data.json  sada_subprograms_data.json
app/controllers/data/conservation/acep/: acep_state_distribution_data.json
app/controllers/data/conservation/crp/: crp_state_distribution_data.json  crp_subprograms_data.json
app/controllers/data/conservation/csp/: csp_map_data.json  csp_practice_categories_data.json  csp_state_distribution_data.json
app/controllers/data/crop-insurance/: crop_insurance_state_distribution_data.json  crop_insurance_subprograms_data.json
app/controllers/data/csp/: csp_map_data.json
app/controllers/data/eqip/: eqip_practice_categories_data.json
app/controllers/data/landingpage/: allprograms.json  summary.json
app/controllers/data/snap/: snap_state_distribution_data.json
app/controllers/data/yields/: fsaYields.json
app/db/: database.py
app/models/: allprograms.py  category1.py  db.py  payment.py  practice.py  practice_category.py  practices.py  program.py  state.py  statecode.py  sub_subprogram.py  subprogram.py  subtitle.py  summary.py  title.py
app/utils/: config.py  dbutils.py  jsonutils.py  rest_handlers.py
app/utils/data/: allprograms.csv  category1.csv  practices.csv  states.csv  summary.csv
app/utils/data/json/: allprograms.json  summary.json
pdl_api/: __init__.py
pdl_api/app/: app.py
pdl_api/app/controllers/: configs.py  pdl.py
pdl_api/app/models/: category2.py  program_records.py  states.py
tests/: test_format.py
(+41 files in other folders)
