[tool.poetry]
name = "pdl-api"
version = "0.1.0"
description = ""
authors = ["Yong Wook Kim <ywkim@illinois.edu>"]
readme = "README.md"
packages = [{include = "pdl_api"}]

[tool.poetry.dependencies]
python = ">=3.7"
flask = ">=1.1.1"
connexion = {extras = ["swagger-ui"], version = ">=2.9.0"}
gunicorn = ">=20.1.0"
SQLAlchemy = {extras = ["mypy"], version = ">=1.4"}
python-dotenv = ">=0.10.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
