[tool.poetry]
name = "pdl-api"
version = "0.1.0"
description = ""
authors = ["Yong Wook Kim <ywkim@illinois.edu>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=1.3.5"
flask = "^1.1.1"
Jinja2= "^3.0.3"
flask_cors = "^3.0.0"
connexion = {version = "^2.9.0", extras = ["swagger-ui"]}
gunicorn = "^20.1.0"
SQLAlchemy = {extras = ["mypy"], version = ">=1.4"}
python-dotenv = ">=0.10.3"
psycopg2-binary = ">=2.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
