[tool.poetry]
name = "pdl-api"
version = "0.2.0"
description = ""
authors = ["Yong Wook Kim <ywkim@illinois.edu>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=1.3.5"
flask = ">=2.2.0"
flask-sqlalchemy = ">=3.0.2"
Flask-Cors = ">=3.0.10"
itsdangerous = ">=2.0.1"
gunicorn = ">=20.0.4"
diskcache = ">=4.0.0"
SQLAlchemy = {extras = ["mypy"], version = ">=2.0.0"}
connexion = {version = "^2.9.0", extras = ["swagger-ui"]}
python-dotenv = ">=0.10.3"
psycopg2-binary = ">=2.9"
gevent= ">=20.9.0"
pycodestyle= ">=2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
